@@ -132,7 +132,9 @@ Skywalking|11800、12800、9080|Skywalking APM
 ### JVM优化
 
 ```
--Xms256m -Xmx256m -Xmn128m -Xss1m -XX:+UseG1GC  -XX:+PrintGCDetails
+JDK1.8默认的是UseParallelGC,ParallelGC 默认的是 **Parallel Scavenge（新生代）+ Parallel Old（老年代）**
+-Xms256m -Xmx256m -Xmn128m -Xss1m -XX:+PrintGCDetails
+-Xms256m -Xmx256m -Xmn128m -Xss1m -XX:+UseConcMarkSweepGC
 ```
 ### 打包命令
 ```
